# pentra

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_report.html
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: build_exe.py  create_icon.py  setup_dev.py
src/pentra/: __init__.py  __main__.py  app.py  config.py  models.py
src/pentra/core/: __init__.py  network_scanner.py  rate_limiter.py  scan_orchestrator.py  scanner_base.py  update_checker.py  web_scanner.py  wifi_scanner.py
src/pentra/core/service_probes/: __init__.py  base.py  elasticsearch_probe.py  mongodb_probe.py  mysql_probe.py  postgresql_probe.py  redis_probe.py  ssh_probe.py
src/pentra/core/web_probes/: __init__.py  base.py  exposed_paths.py  path_traversal.py  security_headers.py  sql_injection.py  ssl_tls.py  xss.py
src/pentra/gui/: __init__.py  wizard.py
src/pentra/gui/screens/: __init__.py  authorization.py  depth_select.py  progress.py  report.py  target_select.py
src/pentra/gui/widgets/: __init__.py  language_selector.py  update_notification.py
src/pentra/i18n/: __init__.py  translator.py
src/pentra/i18n/locales/: en.json  tr.json
src/pentra/knowledge/: __init__.py  cve_mapper.py  nvd_client.py  remediations.py  remediations_en.py  remediations_tr.py
src/pentra/reporting/: __init__.py  comparison.py  logo.py  report_builder.py  risk_score.py
src/pentra/reporting/exporters/: __init__.py  html_exporter.py  markdown_exporter.py  pdf_exporter.py
src/pentra/reporting/templates/: basic_report.html.j2  basic_report.md.j2  pdf_report.html.j2
src/pentra/safety/: __init__.py  authorization.py  scope_validator.py
src/pentra/storage/: __init__.py  audit_log.py  scan_history.py
src/pentra/utils/: __init__.py  network_utils.py
tests/: conftest.py
tests/unit/: test_models.py  test_smoke.py
tests/unit/core/: test_network_scanner.py  test_rate_limiter.py  test_scan_orchestrator.py  test_web_scanner.py  test_wifi_scanner.py
tests/unit/core/service_probes/: test_elasticsearch_probe.py  test_mongodb_probe.py  test_mysql_probe.py  test_postgresql_probe.py  test_redis_probe.py  test_ssh_probe.py
tests/unit/core/web_probes/: test_exposed_paths.py  test_path_traversal.py  test_security_headers.py  test_sql_injection.py  test_ssl_tls.py  test_xss.py
tests/unit/i18n/: test_translator.py
tests/unit/knowledge/: test_cve_mapper.py  test_nvd_client.py  test_remediations.py
tests/unit/reporting/: test_comparison.py  test_html_exporter.py  test_markdown_exporter.py  test_pdf_exporter.py  test_report_builder.py  test_risk_score.py
tests/unit/safety/: test_authorization.py  test_scope_validator.py
tests/unit/storage/: test_audit_log.py  test_scan_history.py
tests/unit/utils/: test_network_utils.py
